--- a/index-parcel.html
+++ b/index-parcel.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Webpack</title>
-        <script src="dist/main.js"></script>
-		<link rel="stylesheet" href="content/index.css">
+        <script src="/src/index.ts"></script>
+		<link rel="stylesheet" href="/content/index.less">
     </head> 
     <body>
 		<div id="header"></div>
